--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <p class="social-title">Присоединяйтесь</p>
+          <p class="footer-title">Присоединяйтесь</p>
           <ul class="social-list list">
             <li class="social-item">
               <a href="#" class="social-link link">
@@ -362,6 +362,16 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <p class="footer-title">Подпишитесь на рассылку</p>
+          <input class="footer-input" type="email" name="mail" placeholder="E-mail" >
+          <button type="submit" class="footer-btn">
+              Подписаться
+               <swg class="send-icon">
+                <use href="./img/icons.svg#icon-send"></use>
+              </swg>
+          </button>
+        </form>
       </div>
     </footer>
   <div class="backdrop is-hidden" data-modal>
@@ -371,8 +381,57 @@
           <use href="./img/icons.svg#icon-close"></use>
         </svg>
       </button>
+       <form class="request-form"> 
+        <p class="request-title">Оставьте свои данные, мы вам перезвоним</p>
+        <label class="request-field">
+          <span class="request-descr">Имя</span> 
+          <input class="request-input" type="text" name="name">
+          <svg class="request-icon" width="18" height="18">
+            <use href="./img/icons.svg#icon-person"></use>
+          </svg>
+        </label>
+
+        
+        <label class="request-field">
+          <span class="request-descr">Телефон</span> 
+          <input class="request-input" type="tel" name="tel">
+          <svg class="request-icon" width="18" height="18">
+            <use href="./img/icons.svg#icon-phone"></use>
+          </svg>
+        </label>
+
+        <label class="request-field">
+          <span class="request-descr">Почта</span> 
+          <input class="request-input" type="email" name="mail">
+          <svg class="request-icon" width="18" height="18">
+            <use href="./img/icons.svg#icon-email"></use>
+          </svg>
+        </label>
+
+        <label class="request-field">
+          <span class="request-descr">Комментарии</span> 
+          <textarea class="request-comment" name="comment" rows="10" placeholder="Введите текст"></textarea>
+
+        </label>
+
+        
+        <label class="request-check">
+          <input class="checkbox visually-hidden" type="checkbox" name="check" value="check" checked >
+          <span class="custom-check">
+            <svg class="check-icon" width="16" height="15">
+              <use href="./img/icons.svg#icon-check"></use>
+            </svg>
+          </span>
+          <span class="check-text">
+            Соглашаюсь с рассылкой и принимаю 
+            <a href="#" class="request-link">Условия договора</a> 
+          </span>
+        </label>
+
+        <button type="submit" class="request-btn">Отправить</button>
+      </form>
     </div>
-  </div>
+    </div>
   <script src="./js/modal.js"></script>
   </body>
 </html>
