--- a/portfolio.html
+++ b/portfolio.html
@@ -206,7 +206,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <p class="social-title">Присоединяйтесь</p>
+          <p class="footer-title">Присоединяйтесь</p>
           <ul class="social-list list">
             <li class="social-item">
               <a href="#" class="social-link link">
@@ -238,6 +238,16 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <p class="footer-title">Подпишитесь на рассылку</p>
+          <input class="footer-input" type="email" name="mail" placeholder="E-mail" >
+          <button type="submit" class="footer-btn">
+              Подписаться
+               <swg class="send-icon">
+                <use href="./img/icons.svg#icon-send"></use>
+              </swg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
