Внесены изменения по комментариям

--- a/portfolio.html
+++ b/portfolio.html
@@ -240,12 +240,12 @@
         </div>
         <form class="footer-form">
           <p class="footer-title">Подпишитесь на рассылку</p>
-          <input class="footer-input" type="email" name="mail" placeholder="E-mail" >
+          <input class="footer-input" type="email" name="mail" placeholder="E-mail" required>
           <button type="submit" class="footer-btn">
               Подписаться
-               <swg class="send-icon">
+               <svg class="send-icon">
                 <use href="./img/icons.svg#icon-send"></use>
-              </swg>
+              </svg>
           </button>
         </form>
       </div>
